fix some layout issues

--- a/css/index.css
+++ b/css/index.css
@@ -6,9 +6,6 @@ body{
   margin: -8px 10px 0 0;
   width: 40px;
 }
-#main-container{
-  min-height: 550px;
-}
 pre {
   width: 100%;
 }
